# multimodal_video_Dubbing_assisstance

./: .gitignore  Logic.txt  app.py  auto  core.py  diarization.py  main.py  pyproject.toml  requirements.txt  translation.py  translation_model=_facebook_nllb_200_distilled_600m.py  voice_cloning.py
dubbing_output_8ca37531/transcript/: transcript.json  transcript.txt  translated.json
dubbing_output_9d4aee16/transcript/: transcript.json  transcript.txt  translated.json
