[project]
name = "new-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audio-separator>=0.41.1",
    "demucs>=4.0.1",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "pyannote-audio>=4.0.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "stable-ts>=2.19.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "uvicorn[standard]>=0.40.0",
    "whisperx",
]
